force-app/main/default/objects/RTL_Referral__c/fields/RTL_Reporting_Region__c.field-meta.xml
<CustomField>
    <fullName>RTL_Reporting_Region__c</fullName>
    <formula>IF( RecordType.DeveloperName = &apos;Refer_to_Retail&apos; || 
RecordType.DeveloperName = &apos;Closed_Refer_to_Retail&apos; || 
RecordType.DeveloperName = &apos;Retail_Cross_Channel_Referral&apos; || 
RecordType.DeveloperName =&apos;Closed_Retail_Cross_Channel_Referral&apos;, RTL_Owner_Region__c , RTL_Region_Group__c )</formula>
    <label>Reporting Region</label>
    <type>Text</type>
</CustomField>