force-app/main/default/objects/RTL_Referral__c/fields/RTL_RM_Owner__c.field-meta.xml
<CustomField>
    <fullName>RTL_RM_Owner__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RM Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>