force-app/main/default/objects/RTL_Referral__c/fields/RTL_Sales_Amount_Per_Year__c.field-meta.xml
<CustomField>
    <fullName>RTL_Sales_Amount_Per_Year__c</fullName>
    <label>Sales Amount Per Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SE : &lt;100 MB</fullName>
            </value>
            <value>
                <fullName>BB : 100-1,000 MB</fullName>
            </value>
            <value>
                <fullName>CB : 1,001-5,000 MB</fullName>
            </value>
            <value>
                <fullName>MB : &gt;5,000 MB</fullName>
            </value>
            <value>
                <fullName>SBO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>