force-app/main/default/objects/RTL_Referral__c/fields/RTL_Send_To_Call_Me_Now_Flag__c.field-meta.xml
<CustomField>
    <fullName>RTL_Send_To_Call_Me_Now_Flag__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Send to Call Me Now Flag</label>
    <length>10</length>
    <type>Text</type>
</CustomField>