force-app/main/default/objects/RTL_Referral__c/fields/RTL_Stage__c.field-meta.xml
<CustomField>
    <fullName>RTL_Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RTL_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>In progress_Contacted</fullName>
                <label>Contacted &amp; In progress</label>
            </value>
            <value>
                <fullName>Closed (Interested)</fullName>
            </value>
            <value>
                <fullName>Closed (Not Interested)</fullName>
            </value>
            <value>
                <fullName>Closed (Unable to contact)</fullName>
            </value>
            <value>
                <fullName>Closed (Unqualified)</fullName>
            </value>
            <value>
                <fullName>Closed (Service Completed)</fullName>
            </value>
            <value>
                <fullName>Closed By AL System</fullName>
            </value>
            <value>
                <fullName>Invalid (Duplicate Opportunity)</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>Closed (Transferred)</fullName>
            </value>
            <value>
                <fullName>Closed (Referral Ticket)</fullName>
            </value>
            <value>
                <fullName>Closed (Unqualified  Customer)</fullName>
                <isActive>false</isActive>
                <label>Closed (Unqualified  Customer)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>