force-app/main/default/objects/RTL_Referral__c/fields/RTL_Sub_Product__c.field-meta.xml
<CustomField>
    <fullName>RTL_Sub_Product__c</fullName>
    <label>Sub Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>สินเชื่อเงินกู้เบิกเกินบัญชีทั่วไป</fullName>
            </value>
            <value>
                <fullName>สินเชื่อเงินกู้เบิกเกินบัญชี พร้อมเพิ่ม</fullName>
            </value>
            <value>
                <fullName>สินเชื่อเงินกู้เพื่อก่อสร้างสถานประกอบการ</fullName>
            </value>
            <value>
                <fullName>สินเชื่อเงินกู้เพื่อซื้อสถานประกอบการ</fullName>
            </value>
            <value>
                <fullName>สินเชื่อเงินกู้เพื่อซื้ออาคารพาณิชย์ หรือ โฮมออฟฟิศ</fullName>
            </value>
            <value>
                <fullName>สินเชื่อเงินกู้เพื่อซื้อเครื่องจักร</fullName>
            </value>
            <value>
                <fullName>สินเชื่อเงินกู้แบบไม่มีหลักประกัน</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>