force-app/main/default/objects/RTL_Referral__c/fields/RTL_Title__c.field-meta.xml
<CustomField>
    <fullName>RTL_Title__c</fullName>
    <label>Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mr.</fullName>
                <label>นาย</label>
            </value>
            <value>
                <fullName>Mrs.</fullName>
                <label>นาง</label>
            </value>
            <value>
                <fullName>Miss</fullName>
                <label>นางสาว</label>
            </value>
            <value>
                <fullName>M L</fullName>
                <label>ม.ล.</label>
            </value>
            <value>
                <fullName>M R</fullName>
                <label>ม.ร.ว.</label>
            </value>
            <value>
                <fullName>Field Marshal</fullName>
                <label>จอมพล</label>
            </value>
            <value>
                <fullName>General</fullName>
                <label>พลเอก</label>
            </value>
            <value>
                <fullName>Lieutenant General</fullName>
                <label>พลโท</label>
            </value>
            <value>
                <fullName>Major General</fullName>
                <label>พลตรี</label>
            </value>
            <value>
                <fullName>Colonel</fullName>
                <label>พันเอก</label>
            </value>
            <value>
                <fullName>Lieutenant Colonel</fullName>
                <label>พันโท</label>
            </value>
            <value>
                <fullName>Major</fullName>
                <label>พันตรี</label>
            </value>
            <value>
                <fullName>Captain (Army)</fullName>
                <label>ร้อยเอก</label>
            </value>
            <value>
                <fullName>Lieutenant (Army)</fullName>
                <label>ร้อยโท</label>
            </value>
            <value>
                <fullName>Sub Lieutenant (Army)</fullName>
                <label>ร้อยตรี</label>
            </value>
            <value>
                <fullName>Sergeant Major First Class</fullName>
                <label>จ่าสิบเอก</label>
            </value>
            <value>
                <fullName>Sergeant Major Second Class</fullName>
                <label>จ่าสิบโท</label>
            </value>
            <value>
                <fullName>Sergeant Major Third Class</fullName>
                <label>จ่าสิบตรี</label>
            </value>
            <value>
                <fullName>Sergeant (Army)</fullName>
                <label>สิบเอก</label>
            </value>
            <value>
                <fullName>Corporal (Army)</fullName>
                <label>สิบโท</label>
            </value>
            <value>
                <fullName>Private First Class</fullName>
                <label>สิบตรี</label>
            </value>
            <value>
                <fullName>Private</fullName>
                <label>พลทหาร</label>
            </value>
            <value>
                <fullName>Army Cadet</fullName>
                <label>น้กเรียนนายร้อย</label>
            </value>
            <value>
                <fullName>Army Non-Commissioned Officer Student</fullName>
                <label>นักเรียนนายสิบ</label>
            </value>
            <value>
                <fullName>Admiral of the Fleet</fullName>
                <label>จอมพลเรือ</label>
            </value>
            <value>
                <fullName>Admiral</fullName>
                <label>พลเรือเอก</label>
            </value>
            <value>
                <fullName>Vice Admiral</fullName>
                <label>พลเรือโท</label>
            </value>
            <value>
                <fullName>Rear Admiral</fullName>
                <label>พลเรือตรี</label>
            </value>
            <value>
                <fullName>Captain</fullName>
                <label>นาวาเอก</label>
            </value>
            <value>
                <fullName>Commander</fullName>
                <label>นาวาโท</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>