force-app/main/default/objects/RTL_Referral__c/fields/RTL_TMB_Campaign_Reference__c.field-meta.xml
<CustomField>
    <fullName>RTL_TMB_Campaign_Reference__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TMB Campaign Reference</label>
    <length>200</length>
    <type>Text</type>
</CustomField>