force-app/main/default/objects/RTL_Referral__c/fields/RTL_TMB_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>RTL_TMB_Customer_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TMB Customer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>