force-app/main/default/objects/RTL_Referral__c/fields/RTL_Transfer_from_Referral_Id__c.field-meta.xml
<CustomField>
    <fullName>RTL_Transfer_from_Referral_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transfer from Referral Id</label>
    <referenceTo>RTL_Referral__c</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>