force-app/main/default/objects/RTL_Referral__c/fields/RTL_Type__c.field-meta.xml
<CustomField>
    <fullName>RTL_Type__c</fullName>
    <label>Refer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sell (เพื่อนำเสนอขาย)</fullName>
            </value>
            <value>
                <fullName>Account Opening/Service (เพื่อเปิดบัญชี / สมัครบริการ)</fullName>
            </value>
            <value>
                <fullName>Collect Document</fullName>
            </value>
            <value>
                <fullName>Meeting at branch (สาขารอต้อนรับ)</fullName>
            </value>
            <value>
                <fullName>Meeting at branch &amp; Account Opening (สาขารอต้อนรับพร้อมให้บริการเปิดบัญชี)</fullName>
            </value>
            <value>
                <fullName>Introduction call (สาขาโทรสร้างความสัมพันธ์)</fullName>
            </value>
            <value>
                <fullName>เพื่อติดต่อกลับ</fullName>
            </value>
            <value>
                <fullName>To Product Team (เพื่อส่งให้ทีม Product)</fullName>
            </value>
            <value>
                <fullName>บริการให้คำปรึกษา (TMB BIZ ADVISORY)</fullName>
            </value>
            <value>
                <fullName>Service (เพื่อทำรายการ)</fullName>
            </value>
            <value>
                <fullName>For System Only</fullName>
            </value>
            <value>
                <fullName>DM Lead (โทรนัดหมายเพื่อการขาย)</fullName>
            </value>
            <value>
                <fullName>Drop Lead (โทรนัดหมายเพื่อการขาย)</fullName>
            </value>
            <value>
                <fullName>Service (เพื่อให้บริการ)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>