force-app/main/default/objects/RTL_Referral__c/fields/RTL_W2L_Content__c.field-meta.xml
<CustomField>
    <fullName>RTL_W2L_Content__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Content</label>
    <length>80</length>
    <type>Text</type>
</CustomField>