force-app/main/default/objects/RTL_Referral__c/fields/RTL_WithinSLA__c.field-meta.xml
<CustomField>
    <fullName>RTL_WithinSLA__c</fullName>
    <formula>IF( 
AND( 
TEXT(RTL_Stage__c) &lt;&gt; &apos;New&apos;, 
RTL_Refer_Age_Contacted__c &lt;= RTL_SLA__c), 

1,0)</formula>
    <label>Contacted Within SLA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>