force-app/main/default/objects/RTL_Referral__c/fields/RTL_Zone_Team__c.field-meta.xml
<CustomField>
    <fullName>RTL_Zone_Team__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Referred by Zone/Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>