force-app/main/default/objects/RTL_Referral__c/fields/web_business01__c.field-meta.xml
<CustomField>
    <fullName>web_business01__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>business1</label>
    <length>150</length>
    <type>Text</type>
</CustomField>