force-app/main/default/objects/RTL_Referral__c/fields/web_business02__c.field-meta.xml
<CustomField>
    <fullName>web_business02__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>business2</label>
    <length>150</length>
    <type>Text</type>
</CustomField>