force-app/main/default/objects/RTL_Referral__c/fields/WS_Response_Detail__c.field-meta.xml
<CustomField>
    <fullName>WS_Response_Detail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>WS Response Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>