force-app/main/default/objects/RTL_Referral__c/fields/wsUpdateFlag__c.field-meta.xml
<CustomField>
    <fullName>wsUpdateFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>wsUpdateFlag</label>
    <type>Checkbox</type>
</CustomField>