force-app/main/default/objects/RTL_Referral__c/recordTypes/Closed_Refer_from_Digital_Channel.recordType-meta.xml
<RecordType>
    <fullName>Closed_Refer_from_Digital_Channel</fullName>
    <active>true</active>
    <description>Stage is Closed and record type is Refer from Digital Channel</description>
    <label>Closed Refer from Digital Channel</label>
</RecordType>