force-app/main/default/objects/RTL_Referral__c/recordTypes/Closed_Refer_to_Retail.recordType-meta.xml
<RecordType>
    <fullName>Closed_Refer_to_Retail</fullName>
    <active>true</active>
    <description>Refer ลูกค้าที่สนใจผลิตภัณฑ์บุคคล ระหว่าง Commercial กับ สาขา/Wealth</description>
    <label>Closed Refer to Retail</label>
</RecordType>