force-app/main/default/objects/RTL_Referral__c/recordTypes/Closed_Retail_Cross_Channel_Referral.recordType-meta.xml
<RecordType>
    <fullName>Closed_Retail_Cross_Channel_Referral</fullName>
    <active>true</active>
    <description>Refer ลูกค้าจาก Contact Center ไปยัง สาขา/Wealth</description>
    <label>Closed Retail Cross Channel Referral</label>
</RecordType>