force-app/main/default/objects/RTL_Referral__c/recordTypes/Refer_from_Digital_Channel.recordType-meta.xml
<RecordType>
    <fullName>Refer_from_Digital_Channel</fullName>
    <active>true</active>
    <description>Refer ลูกค้าที่สนใจผลิตภัณฑ์จากช่องทาง Digital Channel (FNA)</description>
    <label>Refer from Digital Channel</label>
</RecordType>