force-app/main/default/objects/RTL_Referral__c/recordTypes/Refer_to_Commercial.recordType-meta.xml
<RecordType>
    <fullName>Refer_to_Commercial</fullName>
    <active>true</active>
    <description>Refer ลูกค้าที่สนใจผลิตภัณฑ์เพื่อธุรกิจ ระหว่าง สาขา/Wealth กับ Commercial</description>
    <label>Refer to Commercial</label>
</RecordType>