force-app/main/default/objects/RTL_Referral__c/recordTypes/Refer_to_Retail.recordType-meta.xml
<RecordType>
    <fullName>Refer_to_Retail</fullName>
    <active>true</active>
    <description>Refer ลูกค้าที่สนใจผลิตภัณฑ์บุคคล ระหว่าง Commercial กับ สาขา/Wealth</description>
    <label>Refer to Retail</label>
</RecordType>