force-app/main/default/objects/RTL_Referral__c/recordTypes/Refer_within_Commercial.recordType-meta.xml
<RecordType>
    <fullName>Refer_within_Commercial</fullName>
    <active>true</active>
    <description>Refer ลูกค้าที่สนใจผลิตภัณฑ์เพื่อธุรกิจไปยังทีม Commercial</description>
    <label>Refer within Commercial</label>
</RecordType>