force-app/main/default/objects/RTL_Referral__c/recordTypes/Retail_Cross_Channel_Referral.recordType-meta.xml
<RecordType>
    <fullName>Retail_Cross_Channel_Referral</fullName>
    <active>true</active>
    <description>Refer ลูกค้าจาก Contact Center ไปยัง สาขา/Wealth หรือ Refer ลูกค้าจากสาขา Flagship ไปยังช่องทางต่าง ๆ (Contact Center, Branch, Wealth)</description>
    <label>Retail Cross Channel Referral</label>
</RecordType>