force-app/main/default/objects/RTL_Referral__c/recordTypes/Retail_Order_Transaction.recordType-meta.xml
<RecordType>
    <fullName>Retail_Order_Transaction</fullName>
    <active>true</active>
    <description>Refer เพื่อทำรายการ</description>
    <label>Retail Order Transaction</label>
</RecordType>