force-app/main/default/objects/RTL_Referral__c/validationRules/Can_not_Change_to_New_stage.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_not_Change_to_New_stage</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(PRIORVALUE(RTL_Stage__c),&apos;In progress_Contacted&apos;), TEXT(RTL_Stage__c )=&apos;New&apos;)</errorConditionFormula>
    <errorDisplayField>RTL_Stage__c</errorDisplayField>
    <errorMessage>Can not change to New Stage</errorMessage>
</ValidationRule>