force-app/main/default/objects/RTL_Referral__c/validationRules/Check_Mobile2_10_digit.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Mobile2_10_digit</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(RTL_Mobile2__c)),OR(NOT(ISNUMBER(RTL_Mobile2__c)) ,(LEN(RTL_Mobile2__c)!=10)))</errorConditionFormula>
    <errorDisplayField>RTL_Mobile2__c</errorDisplayField>
    <errorMessage>Mobile Number 2 must be of 10 digits .</errorMessage>
</ValidationRule>