force-app/main/default/objects/RTL_Referral__c/validationRules/Check_Mobile_10_digit.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Mobile_10_digit</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(RTL_Mobile1__c)),OR(NOT(ISNUMBER(RTL_Mobile1__c)) ,(LEN(RTL_Mobile1__c)!=10)))</errorConditionFormula>
    <errorDisplayField>RTL_Mobile1__c</errorDisplayField>
    <errorMessage>Mobile Number 1 must be of 10 digits .</errorMessage>
</ValidationRule>