force-app/main/default/objects/RTL_Referral__c/validationRules/Check_phone_no.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_phone_no</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(RTL_Phone1__c )),OR(LEN(RTL_Phone1__c ) &lt; 9,LEN(RTL_Phone1__c ) &gt; 18,NOT(REGEX(RTL_Phone1__c  ,&quot;[\\d\\-\\s]*&quot;))))</errorConditionFormula>
    <errorDisplayField>RTL_Phone1__c</errorDisplayField>
    <errorMessage>Invalid Office number. 

Only : Number (0-9), The hyphen (‐), Space ( ) are allowed.</errorMessage>
</ValidationRule>