force-app/main/default/objects/RTL_Referral__c/validationRules/Reason_cannot_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_cannot_be_null</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(OR
(TEXT(RTL_Stage__c) = &apos;Closed (Not Interested)&apos;,
TEXT(RTL_Stage__c) = &apos;Closed (Unqualified)&apos;,
TEXT(RTL_Stage__c) = &apos;Closed (Unable to contact)&apos;
,AND(TEXT(RTL_Stage__c)==&apos;Cancel&apos;,RecordType.Name==&apos;Retail Order Transaction&apos;)), 
TEXT(RTL_Reason__c) ==&quot;&quot;),true,false)</errorConditionFormula>
    <errorDisplayField>RTL_Reason__c</errorDisplayField>
    <errorMessage>Please select reason to closed referral</errorMessage>
</ValidationRule>