force-app/main/default/objects/RTL_Referral__c/validationRules/Reason_commercial_not_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_commercial_not_null</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(RTL_Stage__c)==&apos;Cancel&apos;, 
ISBLANK(TEXT(RTL_Reason__c)) ,
OR(RecordType.DeveloperName==&apos;Closed_Refer_to_Commercial&apos;, 
RecordType.DeveloperName==&apos;Closed_Refer_within_Commercial&apos;, 
RecordType.DeveloperName==&apos;Refer_to_Commercial&apos;, 
RecordType.DeveloperName==&apos;Refer_within_Commercial&apos;)
)</errorConditionFormula>
    <errorDisplayField>RTL_Reason__c</errorDisplayField>
    <errorMessage>Please select reason to cancel referral</errorMessage>
</ValidationRule>