force-app/main/default/objects/RTL_Referral__c/validationRules/RTL_Citizen_Id_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>RTL_Citizen_Id_Blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND((!ISBLANK(TEXT( RTL_ID_Type__c ))),
ISBLANK( RTL_Citizen_Id__c ))</errorConditionFormula>
    <errorDisplayField>RTL_Citizen_Id__c</errorDisplayField>
    <errorMessage>ID Number cannot be blank when ID Type is provided.</errorMessage>
</ValidationRule>