force-app/main/default/objects/RTL_Referral__c/validationRules/RTL_Citizen_Id_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>RTL_Citizen_Id_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(RTL_ID_Type__c)=&apos;Citizen ID&apos;,
NOT(AND(
REGEX(RTL_Citizen_Id__c, &quot;[0-9]{13}&quot;),
LEN(RTL_Citizen_Id__c )==13,
VALUE(MID(RTL_Citizen_Id__c,13,1)) = MOD(11 - MOD(( 
VALUE(MID(RTL_Citizen_Id__c,1,1))* 13 +
VALUE(MID(RTL_Citizen_Id__c,2,1))* 12 +
VALUE(MID(RTL_Citizen_Id__c,3,1))* 11 +
VALUE(MID(RTL_Citizen_Id__c,4,1))* 10 +
VALUE(MID(RTL_Citizen_Id__c,5,1))* 9 +
VALUE(MID(RTL_Citizen_Id__c,6,1))* 8 +
VALUE(MID(RTL_Citizen_Id__c,7,1))* 7 +
VALUE(MID(RTL_Citizen_Id__c,8,1))* 6 +
VALUE(MID(RTL_Citizen_Id__c,9,1))* 5 +
VALUE(MID(RTL_Citizen_Id__c,10,1))* 4 +
VALUE(MID(RTL_Citizen_Id__c,11,1))* 3 +
VALUE(MID(RTL_Citizen_Id__c,12,1))* 2
),11),10))
))</errorConditionFormula>
    <errorDisplayField>RTL_Citizen_Id__c</errorDisplayField>
    <errorMessage>Citizen ID is invalid.</errorMessage>
</ValidationRule>