force-app/main/default/objects/RTL_Referral__c/validationRules/RTL_IDType_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>RTL_IDType_Blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
(ISPICKVAL( RTL_ID_Type__c ,&apos;&apos;)),
!ISBLANK( RTL_Citizen_Id__c )
)</errorConditionFormula>
    <errorDisplayField>RTL_ID_Type__c</errorDisplayField>
    <errorMessage>ID Type cannot be blank when ID Number is provided.</errorMessage>
</ValidationRule>