force-app/main/default/objects/RTL_Referral__c/validationRules/Validate_Appointed_Date_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Appointed_Date_Time</fullName>
    <active>true</active>
    <errorConditionFormula>OR( DATEVALUE(Appointed_Date_Time__c) &gt; (TODAY() +(365.2425*50)) , 

DATEVALUE(Appointed_Date_Time__c) &lt; (TODAY() - (365.2425*50 )))</errorConditionFormula>
    <errorDisplayField>Appointed_Date_Time__c</errorDisplayField>
    <errorMessage>Invalid Date and Time</errorMessage>
</ValidationRule>