force-app/main/default/objects/RTL_Referral__c/validationRules/Validate_Closed_By_AL_System.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Closed_By_AL_System</fullName>
    <active>true</active>
    <description>Validation only product New/Used Car &lt;10 / CYC / CYB can be selected Status = Closed By AL System</description>
    <errorConditionFormula>IF(ISPICKVAL(RTL_Stage__c, &apos;Closed By AL System&apos;),  IF(OR(INCLUDES(RTL_Interested_Product__c, &apos;New/Used Car &lt; 10&apos;), RTL_Product_Name_Str__c = &apos;CYC&apos;, RTL_Product_Name_Str__c = &apos;CYB&apos;, RTL_Product_Name_Str__c = &apos;NEW&apos;, RTL_Product_Name_Str__c = &apos;USED&apos;),false,true),false)</errorConditionFormula>
    <errorDisplayField>RTL_Stage__c</errorDisplayField>
    <errorMessage>This Status use for AL Product only.  สถานะนี้ใช้สำหรับผลิตภัณฑ์สินเชื่อรถยนต์เท่านั้น</errorMessage>
</ValidationRule>