force-app/main/default/objects/RTL_Referral__c/validationRules/Validate_Contact_Address.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Contact_Address</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(OR( RTL_Product_Name_Str__c = &apos;CYC&apos;,RTL_Product_Name_Str__c = &apos;CYB&apos;, RTL_Product_Name_Str__c = &apos;NEW&apos;, RTL_Product_Name_Str__c = &apos;USED&apos;),(RTL_Preferred_Branch_Name__c = &apos;AL Marketing&apos;)),(RTL_Contact_Address__c = null),false)</errorConditionFormula>
    <errorDisplayField>RTL_Contact_Address__c</errorDisplayField>
    <errorMessage>Contact Address can not be blank.</errorMessage>
</ValidationRule>