force-app/main/default/objects/RTL_Referral__c/validationRules/Validate_Contact_Channel.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Contact_Channel</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(OR( RTL_Product_Name_Str__c = &apos;CYC&apos;,RTL_Product_Name_Str__c = &apos;CYB&apos;, RTL_Product_Name_Str__c = &apos;NEW&apos;, RTL_Product_Name_Str__c = &apos;USED&apos;, RTL_Product_Name_Str__c = &apos;CYB Revolving&apos;),(RTL_Preferred_Branch_Name__c = &apos;AL Marketing&apos;)),ISBLANK(TEXT(RTL_AL_contact_channel__c)),false)</errorConditionFormula>
    <errorDisplayField>RTL_AL_contact_channel__c</errorDisplayField>
    <errorMessage>Contact Channel can not be blank.</errorMessage>
</ValidationRule>