force-app/main/default/objects/RTL_Referral__c/validationRules/Validate_Customer_Last_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Customer_Last_Name</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(OR( RTL_Product_Name_Str__c = &apos;CYC&apos;,RTL_Product_Name_Str__c = &apos;CYB&apos;, RTL_Product_Name_Str__c = &apos;NEW&apos;, RTL_Product_Name_Str__c = &apos;USED&apos;),(RTL_Preferred_Branch_Name__c = &apos;AL Marketing&apos;)),(RTL_LastName__c = null),false)</errorConditionFormula>
    <errorMessage>Customer Last Name not valid.</errorMessage>
</ValidationRule>