force-app/main/default/objects/RTL_Referral__c/validationRules/Validate_Customer_Name_Cross_Channel.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Customer_Name_Cross_Channel</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName = &quot;Retail_Cross_Channel_Referral&quot;  
&amp;&amp;(  RTL_FirstName__c ==&quot;&quot; || RTL_LastName__c==&quot;&quot; )&amp;&amp; RTL_Account_Name__c ==&quot;&quot;</errorConditionFormula>
    <errorMessage>Please input First Name and Last Name</errorMessage>
</ValidationRule>