force-app/main/default/objects/RTL_Referral__c/validationRules/Validate_dup_opp2.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_dup_opp2</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(RTL_Stage__c) = &apos;Invalid (Duplicate Opportunity)&apos;, 
ISBLANK(RTL_Duplicate_Opportunity__c))</errorConditionFormula>
    <errorDisplayField>RTL_Duplicate_Opportunity__c</errorDisplayField>
    <errorMessage>Please select &quot;Duplicate Opportunity&quot;</errorMessage>
</ValidationRule>