force-app/main/default/objects/RTL_Referral__c/validationRules/Validate_Last_Assigned_Date_time.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Last_Assigned_Date_time</fullName>
    <active>true</active>
    <errorConditionFormula>OR(  DATEVALUE(RTL_Last_Assigned_Date_time__c)   &gt;   (TODAY()  +(365.2425*50)) ,

 DATEVALUE(RTL_Last_Assigned_Date_time__c)    &lt; (TODAY() - (365.2425*50 )))</errorConditionFormula>
    <errorDisplayField>RTL_Last_Assigned_Date_time__c</errorDisplayField>
    <errorMessage>Last Assigned Date/time</errorMessage>
</ValidationRule>